Fix overflow issues in twocol sections

--- a/themes/hugobricks/static/css/base.css
+++ b/themes/hugobricks/static/css/base.css
@@ -83,8 +83,13 @@ a.logo > div.has_subtitle > div span:nth-child(2) {font-size: 0.75rem; font-weig
 
 section {color: var(--textMedium);}
 section, section.image.alt {padding: 4.5rem 0 5rem;}
-section .twocols {display: grid; grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr)); grid-gap: 5.5rem clamp(2rem, 5vw, 5rem);}
-section .twocols > div {display: flex; flex-direction: column; justify-content: center;}
+
+section .twocols {display: flex; flex-direction: column; align-items: center; }
+@media (width >= 48rem) {
+  section .twocols { flex-direction: row;}
+}
+section .twocols > div {width: 100%;}
+
 section .container.small {max-width: 40rem;}
 section .container.medium { max-width: 60rem;}
 section.hasbackgroundcolor {padding: 0; margin-top: 2rem;}
